k8s/05-ingress-gateway-config.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: edulms-ingress
  namespace: edulms
spec:
  ingressClassName: nginx
  rules:
    - host: edulms.local
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: gateway
                port:
                  number: 80
          - path: /
            pathType: Prefix
            backend:
              service:
                name: web
                port:
                  number: 3000
